# my-own-language

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: main.rs
src/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs
src/frontend/syntax/: symbol.rs  token.rs
src/middle/: typechecker.rs
src/utils/: mod.rs  print_ast.rs  runner.rs
